--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 
 #inicio {
     background-color: #ff8181;
-    margin-top: -80px;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -15,6 +14,30 @@
 
 #programas {
     background-color: #6759eb;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#calendario {
+    background-color: #59e6eb;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#sobre {
+    background-color: #59eb60;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#pedidos {
+    background-color: #ddeb59;
     height: 100vh;
     display: flex;
     justify-content: center;
