--- a/desisto dessa ver/style.css
+++ b/desisto dessa ver/style.css
@@ -33,6 +33,14 @@
     z-index: 1;
 }
 
+.player {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 #programas {
     background-color: #6759eb;
