--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
     --first-color: #221a41;
     --first-color-light: #AFA5D9;
     --white-color: #F7F6FB;
+    --bgbody-color: #392e63;
 
     /*Font*/
     --body-font: 'Poppins', sans-serif;    
@@ -30,6 +31,7 @@ body{
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     transition: .5s;
+    background-color: var(--bgbody-color);
 }
 
 a {
@@ -48,7 +50,7 @@ a {
     align-items: center;
     justify-content: space-between;
     padding: 0 1rem;
-    background-color: var(--white-color);
+    background-color: var(--first-color);
     z-index: var(--z-fixed);
     transition: .5s;
 }
@@ -188,4 +190,20 @@ a {
     .body-pd {
         padding-left: calc(var(--nav-width) + 188px);
     }
+}
+
+/*========== RESTO DAS PAGINAS AI QUE ÓDIO ==========*/
+
+#inicio {
+    background-color: var(--bgbody-color);
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+}
+
+#programas {
+    background-color: #8634bd;
+    height: 100vh;
+    width: 100%;
+    margin: 0;
 }
