--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,14 +196,8 @@ a {
 
 #inicio {
     background-color: var(--bgbody-color);
-    height: 100vh;
-    width: 100%;
-    margin: 0;
-}
-
-#programas {
-    background-color: #8634bd;
-    height: 100vh;
-    width: 100%;
-    margin: 0;
+    color: var(--white-color);
+    padding: 1rem;
+    margin-top: 1rem;
+    border-radius: 10px;
 }
