feat: por causa de 3 letras minusculas o contador n quis funcionar, fresco (ja ajeitei isso)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,6 +261,11 @@ a {
     text-align: right;
 }
 
+#progress {
+    display: block;
+    width: var(--progress, 0%)
+}
+
 .bar {
     --space: -4px;
     background-color: #6347a724;
